# tkinter-tooltip

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.html  README.md  contributing.html  examples.html  features.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  tktooltip.html
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  docs.yml  main.yml  python-publish.yml
_sources/: README.md.txt  examples.rst.txt  features.rst.txt  index.rst.txt  modules.rst.txt
docs/: Makefile  conf.py  contributing.rst  examples.rst  index.rst  modules.rst  quickstart.rst  tktooltip.rst
docs/html_extra/: robots.txt
examples/: color_changer.py  matrix.py  multiple_windows.py  tooltip_destroy.py
test/: test_tktooltip.py
tktooltip/: __init__.py  __main__.py  demo.py  tooltip.py  version.py
