[metadata]
name = tkinter-tooltip
url = https://github.com/gnikit/tkinter-tooltip
author = Giannis Nikiteas
author_email = giannis.nikiteas@gmail.com
description = An easy and customisable ToolTip implementation for Tkinter
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Typing :: Typed
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
keywords =
    tkinter
    tktooltip
    tkinter-tooltip
    tooltip
    pop-up
project_urls =
    Documentation = https://gnikit.github.io/tkinter-tooltip
    Repository = https://github.com/gnikit/tkinter-tooltip
    Tracker = https://github.com/gnikit/tkinter-tooltip/issues

[options]
packages = find:
python_requires = >= 3.7
install_requires =
    importlib-metadata; python_version < "3.8"
    typing-extensions; python_version < "3.8"

[options.packages.find]
exclude =
    assests
    docs
    examples
    themes

[options.extras_require]
dev =
    pytest >= 5.4.3
    pytest-cov >= 2.12.1
    black
    isort
docs =
    sphinx >= 4.0.0
    sphinx-argparse
    sphinx-autodoc-typehints
    sphinx_design
    sphinx-copybutton
    furo
    myst-parser
    sphinx-sitemap
examples =
    sv-ttk
    Pillow

[flake8]
max-line-length = 88
extend-ignore = E203, E722
